--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin-left: 10em;
   margin-right: 10em;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: rgb(226, 215, 215);
   background-color: rgb(3, 3, 3);
+  text-align: center;
 }
 
 code {
